<resources>
    <string name="app_name">Ojass</string>
    <string name="next">Next</string>
    <string name="skip">SKIP</string>
    <string name="gotit">Got It</string>

    <string name="Maps">Maps</string>
    <string name="Sponsors">Sponsors</string>
    <string name="GuruGyan">Guru Gyan</string>
    <string name="AppDev">App Dev</string>
    <string name="Team">Ojass Team</string>
    <string name="Faqs">FAQ</string>
    <string name="AboutUs">About Us</string>

    <string name="activity_indicator">Activity Indicator : </string>
    <string name="log_out">Log Out</string>
    <string name="event_name">Event: </string>
    <string name="team_result">Result: </string>
    <string name="kit">Kit</string>

    <string-array name="tshirt_size">
        <item>XS (34)</item>
        <item>S (36)</item>
        <item>M (38)</item>
        <item>L (40)</item>
        <item>XL (42)</item>
        <item>XXL (44)</item>
    </string-array>
    '
    <string-array name="noti_channel">
        <item>OJASS</item>
        <item>Arthashastra</item>
        <item>CircuitHouse</item>
        <item>VishwaCodeGenesis</item>
        <item>NoGroundZone</item>
        <item>Paraphernalia</item>
        <item>Produs</item>
        <item>SiliconValley</item>
        <item>RiseOfMachines</item>
        <item>NSCET</item>
        <item>NeoDrishti</item>
        <item>Exposicion</item>
        <item>DeusXMachina</item>
        <item>Avartan</item>
        <item>Armageddon</item>
        <item>Aakriti</item>
        <item>Prayas</item>
        <item>LiveCS</item>
    </string-array>

    <string-array name="team_names">
        <item>Administration</item>
        <item>Core</item>
        <item>Plannning &amp; Development</item>
        <item>Team Coordinator</item>
        <item>Media Relation</item>
        <item>Public Relation</item>
        <item>Event Management</item>
        <item>Hospitality</item>
        <item>Corporate</item>
        <item>Logistics</item>
        <item>Web Team</item>
        <item>App Team</item>
        <item>Creative Team</item>
        <item>Robotics</item>
        <item>Decorations</item>
    </string-array>

    <string name="FACEBOOK_APP_ID">{Your facebook app id}</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">{Your facebook account kit token}</string>
    <string name="about_us">In the current era of advancing technology and automation, it is necessary that we be               updated with the practical methodologies. Thus, to promote the idea of constructive            thinking and sustainable growth, ​National Institute of Technology, Jamshedpur​ is          organising the Eleventh installment of its annual Techno-Management fest, Ojass’18 from           March 16​th​-18​th 2018​. Ojass is the second largest fest of its kind in East India. It is a                  grand theatre of technological innovation and business calibre.
With events ranging from filmmaking and photography to quizzes and prototype           presentations, Ojass has events for everyone. Reinventing itself each year, Ojass sets            new standards and hence, new challenges for everyone with every edition. With this             year’s theme being centered around space, we plan to take you on “A Celestial              Voyage”. So, buckle up and join us on this journey on the 16​th​ of March.   </string>
    <string name="techfest">NIT Jamshedpur</string>
    <string name="no_noti">No new notification</string>
    <string name="all_noti">See all Notifications</string>

</resources>
