<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@mipmap/ojass_background"
    tools:context="in.nitjsr.ojass.Activities.MainActivity">

    <RelativeLayout
        android:id="@+id/ll_topbar"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OJASS"
            android:paddingLeft="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <ImageButton
            android:padding="10dp"
            android:id="@+id/rl_subscribe"
            android:layout_toLeftOf="@+id/rl_notification_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_bookmark_border_white_36px"
            android:layout_marginRight="6dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:tint="@color/white"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:id="@+id/rl_notification_menu"
            android:layout_centerVertical="true"
            android:layout_width="45dp"
            android:padding="10dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icon_notification"
                android:background="@android:color/transparent"
                android:tint="@color/white"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/tv_noti_count"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="3"
                android:layout_margin="3dp"
                android:textSize="10sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/notification_background_circle_red"/>

        </RelativeLayout>

    </RelativeLayout>

    <in.nitjsr.ojass.Utils.CustomViewPager
        android:id="@+id/view_pager_mainactivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ll_topbar"
        android:layout_above="@+id/navigation"/>

    <!--LinearLayout
        android:id="@+id/ll_notification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_below="@+id/ll_topbar"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <ImageView
                android:layout_alignParentRight="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:tint="#cdcdcd"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/triangle"/>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:background="#cdcdcd"
            android:id="@+id/rv_notification"
            android:layout_width="match_parent"
            android:layout_marginTop="-5dp"
            android:layout_height="250dp" />

        <TextView
            android:id="@+id/tv_see_all_noti"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/bg_screen1"
            android:text="See all Notification"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/white"/>

        <View
            android:id="@+id/view_noti_blank"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    </LinearLayout!-->
    <LinearLayout
        android:id="@+id/ll_notification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_topbar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:tint="#cdcdcd"
                android:src="@drawable/triangle"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="-8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_all_notif"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_notification"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="#cdcdcd"/>

            <TextView
                android:id="@+id/tv_see_all_noti"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="See all Notification"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/view_noti_blank"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/ib_swipe_up"
        android:background="@android:color/transparent"
        android:layout_above="@+id/ll_swipe_up"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/up_font"
        android:tint="@android:color/holo_red_dark"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/ll_blank"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_above="@+id/ll_swipe_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:animateLayoutChanges="true"
        android:id="@+id/ll_swipe_up"
        android:visibility="gone"
        tools:visibility="gone"
        android:layout_above="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorAccent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/ll_maps_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icon_maps"
                    android:tint="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Maps"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sponsors_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icon_sponsors"
                    android:tint="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sponsors"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/ll_guru_gyan_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icon_guru_gyan"
                    android:tint="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GuruGyan"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_app_dev_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icon_dev"
                    android:tint="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AppDev"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/ll_team_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icon_team"
                    android:tint="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Team"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_faq_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icon_faq"
                    android:tint="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Faqs"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/ll_about_us_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icon_about_us"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AboutUs"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navigation" />

</RelativeLayout>
