<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.nitjsr.ojass.Fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" >

            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Abhishek Kumar"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/tv_profile_ojass_id"
                android:layout_below="@+id/tv_profile_name"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:text="OJ210147"/>

            <ImageButton
                android:id="@+id/ib_refresh"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/ic_refresh"
                android:layout_centerVertical="true"
                android:tint="@color/colorPrimary"
                android:visibility="visible"
                android:background="@android:color/transparent"
                android:padding="6dp" />

        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="right">

                <TextView
                    android:id="@+id/tv_profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="abhishek@buyhatke.com"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_profile_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    tools:text="+91-7858030449"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="36dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/iv_tshirt"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@android:drawable/checkbox_off_background"
                        android:background="@android:color/transparent"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:id="@+id/tv_tshirt_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/colorPrimaryDark"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/iv_kit"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@android:drawable/checkbox_off_background"
                        android:background="@android:color/transparent"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kit"
                        android:textSize="12sp"
                        android:textColor="@color/colorPrimaryDark"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/ib_logOut"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/log_out"
            android:layout_marginTop="16dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:textColor="@color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_indicator"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/tv_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold"
                android:text="0%"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_profile_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"/>

        <Button
            android:id="@+id/btn_click_to_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="Click To Register"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_marginTop="60dp"
            android:textAllCaps="false"/>

    </LinearLayout>

</ScrollView>
